// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField> should focus the input 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[MockFunction]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should receive the correct value while typing 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value="foobar"
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should render a simple text field 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should render the text field as password 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  password={true}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                password={true}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={true}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="password"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should render the text field with a default value 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value="FooBar"
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={true}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value="FooBar"
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value="FooBar"
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value="FooBar"
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should sanitize the input 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                onSanitize={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value="FOOBAR"
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should show the error message 1`] = `
<TextField
  attributes={null}
  className=""
  errorText="This is an error here"
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText="This is an error here"
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={true}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-state-alert, #ff0000)",
              }
            }
          />
        </div>
      </Underline>
      <ErrorText
        ariaHidden={false}
        className={null}
        elementName="test-input"
        errorText="This is an error here"
        translate={true}
      >
        <div
          aria-atomic="true"
          aria-hidden={false}
          aria-live="assertive"
          className="css-1tzi51f errorText"
          id="ariaError-test-input"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={{}}
            role={null}
            string="This is an error here"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              This is an error here
            </span>
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should show the label 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label="This is the label"
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label="This is the label"
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Placeholder
        aria-hidden={true}
        hasLeftElement={false}
        placeholder="This is the label"
        visible={true}
      >
        <div
          aria-hidden={true}
          className="css-qq9d2l placeholder"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={{}}
            role={null}
            string="This is the label"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              This is the label
            </span>
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="test-input"
        isFloating={false}
        isFocused={false}
        label="This is the label"
        labelStatic={false}
      >
        <label
          className="css-1nn9zl4 css-1jyyyen label"
          htmlFor="test-input"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={{}}
            role={null}
            string="This is the label"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              This is the label
            </span>
          </Translate>
        </label>
      </Label>
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should show the placeholder text 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  placeholder="This is the placeholder text"
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder="This is the placeholder text"
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Placeholder
        aria-hidden={true}
        hasLeftElement={false}
        placeholder="This is the placeholder text"
        visible={true}
      >
        <div
          aria-hidden={true}
          className="css-qq9d2l placeholder"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={{}}
            role={null}
            string="This is the placeholder text"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              This is the placeholder text
            </span>
          </Translate>
        </div>
      </Placeholder>
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;

exports[`<TextField> should trigger the validation callback 1`] = `
<TextField
  attributes={null}
  className=""
  errorText=""
  hasUnderline={true}
  label=""
  leftElement={null}
  maxLength=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onValidate={
    [MockFunction] {
      "calls": [
        [
          "",
          true,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder=""
  rightElement={null}
  type="text"
  value=""
>
  <FormElement
    className=" ui-shared__form__text-field"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-input"
    isFocused={false}
    label=""
    labelStatic={false}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv  ui-shared__form__text-field formElement ui-shared__form-element"
    >
      <Grid
        className=""
        component="ul"
        wrap={false}
      >
        <ul
          className=" css-h7r55a common__grid"
        >
          <GridItem
            className="css-1kppfx4"
            component="li"
            grow={1}
            shrink={1}
          >
            <li
              className="css-1kppfx4 css-1gs0ko2"
            >
              <_default
                attributes={null}
                className="
                css-keangt 
                
              "
                maxLength=""
                multiLine={false}
                name="test-input"
                onChange={[Function]}
                onFocusChange={[Function]}
                onValidate={
                  [MockFunction] {
                    "calls": [
                      [
                        "",
                        true,
                      ],
                    ],
                    "results": [
                      {
                        "type": "return",
                        "value": undefined,
                      },
                    ],
                  }
                }
                type="text"
                validateOnBlur={true}
                value=""
              >
                <SimpleInput
                  attributes={null}
                  autoComplete={false}
                  autoCorrect={false}
                  className="
                css-keangt 
                
              "
                  disabled={false}
                  id={null}
                  inputComponent="input"
                  isControlled={false}
                  maxLength=""
                  multiLine={false}
                  name="test-input"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onKeyPress={[Function]}
                  onSanitize={[Function]}
                  onValidate={
                    [MockFunction] {
                      "calls": [
                        [
                          "",
                          true,
                        ],
                      ],
                      "results": [
                        {
                          "type": "return",
                          "value": undefined,
                        },
                      ],
                    }
                  }
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  validateOnBlur={true}
                  value=""
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="
                css-keangt 
                
               simpleInput common__simple-input"
                    disabled={false}
                    id={null}
                    inputMode={null}
                    maxLength=""
                    min={null}
                    name="test-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={null}
                    onKeyPress={[Function]}
                    pattern={null}
                    required={false}
                    step={null}
                    type="text"
                    value=""
                  />
                </SimpleInput>
              </_default>
            </li>
          </GridItem>
        </ul>
      </Grid>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</TextField>
`;
